<resources>
    <string name="app_name">ShoeStore</string>
    <string name="boost_your">Boost your \nstyle now</string>
    <string name="boost_your_desc">Appear more confident with the \nbest shoes with elegant designs</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="start">Start Now</string>
    <string name="start_now">Start Now</string>
    <string name="fill_shoe_info">Fill shoe info</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="price">price</string>
    <string name="logout">Logout</string>
</resources>