<?xml version="1.0" encoding="utf-8"?>
<!--using constaint layout here to make the flat layout with many nested views-->
<!--and to accomplish the wanted design easily with chains-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ui.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/title"
        style="@style/headline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boost_your"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/message"
        style="@style/headline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boost_your_desc"
        app:layout_constraintBottom_toTopOf="@id/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/start"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/white"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>